<resources>
    <string name="app_name">CardHolderApp</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="go_to_signUp">or Sign Up</string>
    <string name="empty">Empty</string>
    <string name="repeat_passport">Repeat passport</string>
    <string name="sign_up">Sign Up</string>
    <string name="icon">icon</string>
    <string name="go_to_SignIn">or Sign In</string>
    <string name="not_mismatch">Not mismatch</string>
    <string name="recover">Recover</string>
    <string name="logout">Logout</string>
    <string name="low_storage_error">Low storage</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="locaion">Location</string>
    <string name="location">Location</string>
    <string name="site">Site</string>
    <string name="phone">Phone</string>
    <string name="check">check</string>
    <string name="add_phone_to_contact_list">Add to contact list</string>
    <string name="deleted">Deleted</string>
    <string name="undo">Undo</string>
    <string name="search">Search</string>
    <string name="edit_card">Edit card</string>
    <string name="category">Category</string>
    <string name="choose_category">Choose category:</string>
    <string name="filter">Filter</string>
    <string name="required_fields">Required fields</string>
    <string name="additional_info">Additional info</string>
    <string name="favorite">Favorite</string>
    <string name="Empty_list">Empty List</string>
</resources>
