<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_filter"
        android:title="@string/filter"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/item_search"
        android:title="@string/search"
        android:icon="@mipmap/ic_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/item_favorite"
        android:title="@string/favorite"
        android:icon="@mipmap/ic_star_border"
        app:showAsAction="always|collapseActionView" />
</menu>