<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="40dp">

    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/icon"
        android:contentDescription="@string/icon" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/colorWhite">

        <EditText
            android:id="@+id/tv_login_recover_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textSize="20sp"
            tools:ignore="TextFields" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_recover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#79a209df"
        android:text="@string/recover"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/tv_go_to_signIn_recover_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/go_to_SignIn"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />
</LinearLayout>